[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripting/text_box.gd" type="Script" id=1]

[node name="text_box" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="text_box_dialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.5
margin_top = -61.0
margin_right = 176.5
margin_bottom = 61.0
window_title = "window_name"

[node name="l_message" type="Label" parent="text_box_dialog"]
margin_top = 33.0
margin_right = 354.0
margin_bottom = 47.0
text = "window_content"
align = 1

[node name="b_accept" type="Button" parent="text_box_dialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = 20.0
margin_right = 28.0
margin_bottom = 40.0
text = "Accept"
[connection signal="pressed" from="text_box_dialog/b_accept" to="." method="_on_b_accept_pressed"]
